# rnr-components

./: App.tsx  LICENSE  msbuild.binlog  package-lock.json  package.json
common/: flat-list.tsx  state.tsx  text-input.tsx  view.tsx
windows/: CMakeLists.txt  sandbox.sln
windows/CMakeProject/: CMakeLists.txt
windows/sandbox/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  ReactPackageProvider.cs  packages.lock.json  sandbox.csproj
windows/sandbox/Common/: State.cs
windows/sandbox/Module/: Custom.cs  Flyout-Item.cs  Input.cs  MMKVModule.cs
windows/sandbox/Modules/: ModuleTest.cs
windows/sandbox/Properties/: AssemblyInfo.cs
windows/sandbox/Service/: Log.cs  MMKV.cs
